--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,5 +1,6 @@
-<%- include("header") -%>
+<%- include("partials/header") -%>
 
+<h1>About</h1>
+<p><%= content %></p>
 
-
-<%- include("footer") -%>
+<%- include("partials/footer") -%>
