--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,8 @@
 <%- include("partials/header") -%>
 
-<h1>Home</h1>
-<p><%= content %></p>
+<% for (var i=0; i<posts.length; ++i) { %>
+  <h1><%= posts[i].subject %></h1>
+  <p><%= posts[i].content %></p>
+<% } %>
 
 <%- include("partials/footer") -%>
