--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -20,15 +20,15 @@
 }
 
 .footer {
-	position: absolute;
+	position: relative;
 	text-align: center;
 	bottom: 0;
 	width: 100%;
-	height: 60px;
 	background-color: #1abc9c;
 }
 
 .footer p {
+  padding: 30px 0;
 	margin-top: 25px;
 	font-size: 12px;
   color: #fff;
