--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,8 +1,8 @@
 <%- include("partials/header") -%>
 
-<% for (var i=0; i<posts.length; ++i) { %>
-  <h1><%= posts[i].subject %></h1>
-  <p><%= posts[i].content %></p>
-<% } %>
+<% posts.forEach(function(post) { %>
+  <h1><%= post.subject %></h1>
+  <p><%= post.content %></p>
+<% }); %>
 
 <%- include("partials/footer") -%>
