--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -16,11 +16,11 @@
 }
 
 .footer-padding {
-	padding-bottom: 60px;
+	padding-bottom: 12%;
 }
 
 .footer {
-	position: relative;
+	position: fixed;
 	text-align: center;
 	bottom: 0;
 	width: 100%;
@@ -28,8 +28,8 @@
 }
 
 .footer p {
-  padding: 30px 0;
-	margin-top: 25px;
+  margin: 0;
+  padding: 3% 0;
 	font-size: 12px;
   color: #fff;
 }
