--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,5 +1,6 @@
 <%- include("partials/header") -%>
 
-
+<h1><%= postSubject %></h1>
+<p><%= postContent %></p>
 
 <%- include("partials/footer") -%>
